@@ -10,5 +10,5 @@
 
 #define public MagickPackageName "GraphicsMagick"
 #define public MagickPackageVersion "1.4"
-#define public MagickPackageVersionAddendum ".020201120"
-#define public MagickPackageReleaseDate "snapshot-20201120"
+#define public MagickPackageVersionAddendum ".020201121"
+#define public MagickPackageReleaseDate "snapshot-20201121"
