@@ -35,6 +35,17 @@
 <div class="document">
 
 
+<p>2020-11-21  Bob Friesenhahn  &lt;<a class="reference external" href="mailto:bfriesen&#37;&#52;&#48;simple&#46;dallas&#46;tx&#46;us">bfriesen<span>&#64;</span>simple<span>&#46;</span>dallas<span>&#46;</span>tx<span>&#46;</span>us</a>&gt;</p>
+<blockquote>
+<ul class="simple">
+<li>coders/ps.c (WritePSImage): Fix problem when writing PseudoClass
+image with a colormap larger than two entries as bilevel.
+Previous implementation was assuming that the colormap would only
+include two entries for a monochrome image, but many entries may
+exist in the colormap which were never used.  Fixes SourceForge
+issue #635 &quot;gm convert failure from .pgm to .eps&quot;.</li>
+</ul>
+</blockquote>
 <p>2020-11-20  Bob Friesenhahn  &lt;<a class="reference external" href="mailto:bfriesen&#37;&#52;&#48;simple&#46;dallas&#46;tx&#46;us">bfriesen<span>&#64;</span>simple<span>&#46;</span>dallas<span>&#46;</span>tx<span>&#46;</span>us</a>&gt;</p>
 <blockquote>
 <ul class="simple">
